# bondbridge

./: .cursorrules  .gitignore  Cargo.toml  notes.txt
.stellar/: deployed-tokens.env
contracts/: Cargo.toml
contracts/credit_line/: Cargo.toml
contracts/credit_line/src/: lib.rs
contracts/mock_benji/: Cargo.toml
contracts/mock_benji/src/: lib.rs
contracts/mock_usdc/: Cargo.toml
contracts/mock_usdc/src/: lib.rs
scripts/: verify-deployment.sh
