[workspace]
resolver = "2"
members = [
    "credit_line",
    "mock_benji",
    "mock_usdc",
]

[workspace.dependencies]
soroban-sdk = "23.0.1"
soroban-token-sdk = "23.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true